# simnos

./: .dockerignore  .gitignore  LICENSE  README.ja.md  README.md  mkdocs.yml  pyproject.toml  tasks.py  update_platforms.py  zensical.toml
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  docs.yml  main.yml  pypi-publish.yml
docker/: Dockerfile  docker-compose.yaml  inventory.yaml
docs/: collaborators.ja.md  collaborators.md  index.ja.md  index.md
docs/api/: builtin_plugins_api_reference.md  core_api_reference.md
docs/development/: conventions.ja.md  conventions.md  creating_new_platforms.ja.md  creating_new_platforms.md  creating_nos_plugin.ja.md  creating_nos_plugin.md  documentation.ja.md  documentation.md  extras.ja.md  extras.md  github_actions.ja.md  index.ja.md  index.md  tasks.ja.md  tasks.md
docs/examples/: automatic_testing.ja.md  automatic_testing.md  developing_scripts.ja.md  developing_scripts.md  index.ja.md  index.md
docs/overview/: how.ja.md  how.md  references.ja.md  references.md  what.ja.md  what.md  what_not.ja.md  what_not.md  why.ja.md  why.md
docs/usage/: configurations.ja.md  configurations.md  getting_started.ja.md  getting_started.md  installation.ja.md  installation.md  running_in_docker.ja.md  running_in_docker.md  simnos_inventory.ja.md  simnos_inventory.md
simnos/: __init__.py
simnos/core/: host.py  nos.py  pydantic_models.py  servers.py  simnos.py
simnos/plugins/nos/platforms_py/: arista_eos.py  base_template.py  cisco_ios.py  huawei_smartax.py
simnos/plugins/nos/platforms_py/configurations/: huawei_smartax.yaml.j2
simnos/plugins/nos/platforms_py/templates/arista_eos/: show_clock.j2  show_ip_int_br.j2  show_running-config.j2  show_version.j2
simnos/plugins/nos/platforms_py/templates/cisco_ios/: show_running-config.j2  show_version.j2
simnos/plugins/nos/platforms_py/templates/huawei_smartax/: display_board.j2
simnos/plugins/nos/platforms_yaml/: brocade_fastiron.yaml  dell_powerconnect.yaml  fortinet.yaml  juniper_screenos.yaml  mikrotik_routeros.yaml  paloalto_panos.yaml  yamaha.yaml
simnos/plugins/servers/: __init__.py  ssh_server_paramiko.py  tap_io.py  telnet_server.py
simnos/plugins/shell/: __init__.py  cmd_shell.py  utils.py
simnos/plugins/utils/: cli.py
tests/: utils.py
tests/assets/: inventory.txt  inventory.yaml  inventory_configuration.yaml  module.py  test_simnos_register_nos_plugin_from_yaml_file.py  test_simnos_register_nos_plugin_from_yaml_file.yaml
tests/core/: test_docker.py  test_host.py  test_netmiko.py  test_netmiko_init_compat.py  test_nos.py  test_servers.py  test_simnos.py
tests/plugins/: test_cmd_shell.py  test_platforms.py  test_shell_utils.py  test_ssh_server_paramiko.py  test_telnet_server.py
worklogs/: 20260307_205610_claude_issue-69-71-cmdshell-readline-crash.md
