[project]
name = "simnos"
version = "2.0.3"
description = "Simulated Network Operating System"
authors = [
    { name = "KeroRoute lab" },
]
maintainers = [
    { name = "KeroRoute lab" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "NetworkAutomation",
    "Testing",
    "SSH",
    "Integration",
    "NOS"
]
classifiers = [
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "paramiko>=4.0,<5.0",
    "pyyaml<7.0",
    "pydantic<3.0",
    "jinja2>=3.1.6",
    "detect==2020.12.*",
]


[project.urls]
Homepage = "https://github.com/Route-Reflector/simnos/"
Documentation = "https://route-reflector.github.io/simnos/"

[project.scripts]
simnos = "simnos.plugins.utils.cli:run_cli"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["venv", ".venv", "env", ".env"]

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "PERF",  # Perflint
    "RUF",   # ruff itself
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "W",     # pycodestyle
]
ignore = [
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF012",  # mutable-class-default
    "SIM108",  # if-else-block-instead-of-if-exp
]
dummy-variable-rgx = "^_.*"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Allow use of assert in tests
    "S311",  # Allow use of random in tests
    "S105",  # Allow use of hardcoded password to "password"
    "S106",  # Allow use of hardcoded password in tests
    "S104",  # Allow binding to all interfaces in tests
    "S603",  # Allow subprocess calls in tests (e.g. docker compose)
    "S607",  # Allow starting a process with a partial executable path in tests
]
"update_platforms.py" = [
    "S108",  # Probably insecure usage of temp file/directory - this is a script
    "S603",  # Use of subprocess without shell=True - this is a script
    "S607",  # Starting a process with a partial executable path - this is a script
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.bandit]
exclude_dirs = ["./tests/", "./.venv", "./docs/", "./update_platforms.py"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]


[tool.coverage.run]
branch = true
omit = [".*", ".venv"]
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"

[tool.uv.build-backend]
module-name = "simnos"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.4", # Linter
    "ruamel-yaml", # YAML parser
    "ty>=0.0.1a26", # Type checkers
    "pytest", # Testing framework
    "pytest-repeat", # Pytest: Repeat tests
    "pytest-timeout", # Pytest: Timeout tests
    "pytest-xdist>=3.8.0", # Pytest: Parallel test execution
    "bandit",
    "coverage",
    "invoke",
    "pre-commit>=3.8.0,<4.0.0",
    "pyenchant",
    "netmiko",
    "requests",
    "psutil",
    "mkdocstrings[crystal,python]",
    "mkdocs-material",
    "mkdocs-static-i18n",
    "pymdown-extensions",
    "yamllint", # YAML linter
]
